--- a/app/src/main/res/navigation/nav_app.xml
+++ b/app/src/main/res/navigation/nav_app.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/blankFragment"
         android:name="com.example.superheroes.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" >
+        android:label="ALL HEROES"
+        tools:layout="@layout/fragment_blank">
         <action
             android:id="@+id/action_blankFragment_to_male"
             app:destination="@id/male" />
@@ -26,13 +26,13 @@
     <fragment
         android:id="@+id/details"
         android:name="com.example.superheroes.Details"
-        android:label="fragment_details"
+        android:label="DETAIL"
         tools:layout="@layout/fragment_details" />
     <fragment
         android:id="@+id/male"
         android:name="com.example.superheroes.male"
-        android:label="fragment_male"
-        tools:layout="@layout/fragment_male" >
+        android:label="MALE"
+        tools:layout="@layout/fragment_male">
         <action
             android:id="@+id/action_male_to_details"
             app:destination="@id/details" />
@@ -40,8 +40,8 @@
     <fragment
         android:id="@+id/female"
         android:name="com.example.superheroes.female"
-        android:label="fragment_female"
-        tools:layout="@layout/fragment_female" >
+        android:label="FEMALE"
+        tools:layout="@layout/fragment_female">
         <action
             android:id="@+id/action_female_to_details"
             app:destination="@id/details" />
@@ -49,6 +49,10 @@
     <fragment
         android:id="@+id/favourite"
         android:name="com.example.superheroes.Favourite"
-        android:label="fragment_favourite"
-        tools:layout="@layout/fragment_favourite" />
+        android:label="FAVOURITE"
+        tools:layout="@layout/fragment_favourite">
+        <action
+            android:id="@+id/action_favourite_to_details"
+            app:destination="@id/details" />
+    </fragment>
 </navigation>
