--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BlankFragment" >
+    android:background="@android:color/transparent"
+    tools:context=".BlankFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
@@ -30,7 +31,11 @@
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:searchIcon="@drawable/ic_baseline_search_24"
+        android:queryBackground="@color/red"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
