--- a/app/src/main/res/layout/fragment_male.xml
+++ b/app/src/main/res/layout/fragment_male.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     tools:context=".male">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -34,6 +35,8 @@
         android:layout_marginRight="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:searchIcon="@drawable/ic_baseline_search_24"
+        android:queryBackground="@color/red"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
