--- a/app/src/main/res/layout/name.xml
+++ b/app/src/main/res/layout/name.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@android:color/transparent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,6 +22,7 @@
             android:padding="8dp"
             android:paddingLeft="0dp"
             android:text="TextView"
+            android:textColor="#FFFFFF"
             android:textSize="15sp"
             app:autoSizeTextType="uniform" />
 
@@ -32,6 +34,7 @@
             android:padding="8dp"
             android:paddingRight="0dp"
             android:text="TextView"
+            android:textColor="#FFFFFF"
             android:textSize="15sp" />
     </LinearLayout>
 
